--- a/index.html
+++ b/index.html
@@ -1,2 +1,14 @@
-
-<a href="/cgi-bin/index.cgi">ici</a>
+<html>
+<head>
+</head>
+<body>
+<center>
+<a href="/cgi-bin/index.cgi"><img border="0" src="title.png"/></a><br/>
+<font face="verdana">
+<a href="/cgi-bin/index.cgi">Start here!</a>
+<hr width="200px"/>
+<a href="/mitmproxy-ca-cert.pem">profil (certificate authority)</a>
+</font>
+</center>
+</body>
+</html>
