--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <font face="verdana">
 <a href="/cgi-bin/index.cgi">Start here!</a>
 <hr width="200px"/>
-<a href="/mitmproxy-ca-cert.pem">profil (certificate authority)</a>
+<a href="/mitmproxy-ca-cert.pem">first, install this root certificate (Apple profile)</a>
 </font>
 </center>
 </body>
